# mora-the-explorer

./: .gitignore  README.md  checknmr.py  config.py  config.toml  explorer.py  groups.json  main_window.py  mora_path.txt  mora_the_explorer.py  mora_the_explorer.spec  pyproject.toml  requirements.txt  update_path.txt  version.txt  worker.py
mora_the_explorer/: __init__.py  __main__.py  app.py  checknmr.py  config.py  explorer.py  worker.py
mora_the_explorer/cli/: helpers.py
mora_the_explorer/desktop/: __init__.py  controller.py
mora_the_explorer/desktop/ui/: layout.py  main_window.py  options.py  status.py
mora_the_explorer/desktop/ui/spinner/: configurator.py  spinner.py
mora_the_explorer/explorer/: __init__.py  app.py  appmanager.py  checknmr.py  config.py  explorer.py  worker.py
mora_the_explorer/ui/: display.py  layout.py  main_window.py  options.py  status.py
tests/: mock_app_config.toml  mock_user_config.toml  new_user_config.toml  test_config.py  test_explorer.py
ui/: display.py  layout.py  main_window.py  options.py
