[project]
name = "mora-the-explorer"
version = "1.8.0"
description = "A small program for downloading NMR spectra at the Organic Chemistry department at the University of Münster"
authors = [
    { name = "Matthew J. Milner", email = "matterhorn103@proton.me" }
]
dependencies = [
    "darkdetect>=0.8.0",
    "platformdirs>=4.2.0",
    "plyer>=2.1.0",
    "pillow>=10.3.0",
    "pyside6-essentials>=6.7.0",
    "tomli-w>=1.0.0",
]
readme = "README.md"
requires-python = ">= 3.12"

[project.scripts]
mora-the-explorer = "mora_the_explorer.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
#dev-dependencies = ["pyinstaller>=6.6.0"]

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]
pythonpath = [
  "."
]
